--- a/styles/solarsim-map.css
+++ b/styles/solarsim-map.css
@@ -1,18 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Michroma|Roboto');
-* {
+/** {
 	border: 1px solid blue;
-}
+}*/
 html, body {
 	text-align: center;
 	margin: 0 auto;
 	background-color: #fff;
-}
-
-#map {
-    height: 600px;
-    position: fixed;
-    position:fixed;
-
 }
 
 .container {
@@ -20,20 +13,61 @@ html, body {
 	margin: 0 auto;
 }
 
-/* Content */
+/*Display information*/
+.location {
+	height: 300px;
+}
 .content {
 	height: 1000px;
+	position: relative;
+	top:100px;
+
+}
+
+h3 {
+	color: #0884fe;
+	font-size: 20px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: lighter;
+	padding: 0 16px;
+	text-align: left;
+}
+
+h4 {
+	background-color:#0884fe;
+	color: white;
+	height: 35px;
+	font-family: 'Roboto',sans-serif;
+	font-weight: lighter;
+	font-size: 20px;
+	padding-top: 5px;
+}
+/* Google maps section*/
+#map {
+    height: 600px;
+    margin: 0;
+}
+
+.googlemap {
+	height: 600px;
 	background-color: #fff;
-	margin: auto 100px;
+	position: relative;
+	top:100px;
+	margin: 0;
 }
 
 h2 {
-	margin-top: 150px;
 	color: black;
 	font-family: 'Roboto', sans-serif;
 	font-weight: lighter;
+	z-index: 9999;
+	font-size: 36px;
+	text-align: left;
+	margin: 10px 0px;
+	
 }
-/* Header*/
+
+/* Header and navogation bar*/
 .header {
 	background-color: #0884fe;
 	width:100%;
@@ -45,8 +79,7 @@ h2 {
 }
 
 .logo {
-	float: left;
-	padding-left: 30px; 
+	float: left; 
 }
 
 .logo h1 {
@@ -57,14 +90,13 @@ h2 {
 
 .nav {
 	float: right;
-	margin: 20px 0px;
 }
 
 .nav li {
-	color
+	line-height: 1;
 	float: right;
 	display: inline;
-	padding: 0 25px;
+	padding: 35px 10px;
 	color: white;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
@@ -74,4 +106,8 @@ h2 {
 a {
 	text-decoration: none;
 	color: white;
+}
+a:hover {
+	text-decoration: none;
+	color: black;
 }
