--- a/styles/ssimlocator.css
+++ b/styles/ssimlocator.css
@@ -16,7 +16,7 @@ html, body {
 
 /*Display information*/
 .location {
-	height: 350px;
+	height: 400px;
 }
 .content {
 	height: 1000px;
@@ -25,17 +25,27 @@ html, body {
 
 }
 
+form {
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	font-weight: lighter;
+	text-align: left;
+	padding-left: 30px;
+	padding-bottom: 10px;
+}
+
 .location p {
 	font-size: 20px;
 	font-family: 'Roboto', sans-serif;
-	font-weight: lighter;
 	text-align: left;
+	padding-left: 10px;
 }
+
 h3 {
 	color: #0884fe;
-	font-size: 20px;
-	font-family: 'Roboto', sans-serif;
+	font-size: 30px;
 	font-weight: lighter;
+	font-family: 'Roboto', sans-serif;
 	padding: 0 16px;
 	text-align: left;
 }
@@ -45,10 +55,11 @@ h4 {
 	color: white;
 	height: 35px;
 	font-family: 'Roboto',sans-serif;
-	font-weight: lighter;
-	font-size: 20px;
+	font-size: 22px;
 	padding-top: 5px;
 }
+
+
 /* Google maps section*/
 #map {
     height: 600px;
