--- a/styles/ssimlocator.css
+++ b/styles/ssimlocator.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 .container {
-	width: 1000px;
+	max-width: 1000px;
 	margin: 0 auto;
 }
 
@@ -18,7 +18,6 @@ html, body {
 	height: 460px;
 }
 .content {
-	height: 1000px;
 	position: relative;
 	top:400px;
 }
